@@ -8,8 +8,8 @@
 	New packages: librsync, lmbench, squid
 
 	Updated/fixed packages: busybox, dosfstools, e2fsprogs,
-	freetype, iperf, libglib2, libpng, mdadm, memstat, mtd-utils,
-	nano, pppd, setserial, squashfs, wget
+	freetype, iperf, less, libglib2, libpng, mdadm, memstat,
+	mtd-utils, nano, pppd, setserial, squashfs, wget
 
 	Issues resolved (http://bugs.uclibc.org):
 
@@ -19,6 +19,7 @@
 	#805: [PATCH] mdadm - version update
 	#1111: Bump wget to 1.12 and migrate to Makefile.autotools.in
 	#1117: Bump nano to 2.2.3 and migrate to Makefile.autotools.in
+	#1123: Bump less to 436 and migrate to Makefile.autotools.in
 	#1129: Bump memstat to 0.8 and migrate to Makefile.package.in
 	#1273: BR2_INET_IPV6 does not enable IPv6 in pppd
 	#1303: Add librsync package
